--- a/.gitignore
+++ b/.gitignore
@@ -16,15 +16,6 @@ _autosave-*
 *-save.pro
 *-save.kicad_pcb
 fp-info-cache
-
-# Netlist files (exported from Eeschema)
-*.net
-
-# Autorouter files (exported from Pcbnew)
-*.dsn
-*.ses
-
-# Exported BOM files
-*.xml
-*.csv
-
+Zellia80-HE.xml
+Zellia80-HE.csv
+Zellia80-HE-backups/*
